Fixed comment focus in grade editor on Firefox.

--- a/app/assets/stylesheets/application/_grade_editor.scss
+++ b/app/assets/stylesheets/application/_grade_editor.scss
@@ -43,8 +43,10 @@ table.grades-table {
       font-weight: 300;
     }
 
-    &.focused div.comment {
-      display: block;
+    &.focused, &.focused-latch {
+      div.comment {
+        display: block;
+      }
     }
     div.comment {
       position: absolute;
